# last-vpn

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  profile.toml.example  settings.html  tauri.conf.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  tauri-build.yml
design-preview/: index.html
scripts/scripts/: generate_tauri_icons.py
src/: main.rs  main.ts  settings.html  settings.ts  styles.css
src-tauri/: Cargo.toml  build.rs  stls.exe.manifest  stls.rc  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  crypto.rs  lib.rs  main.rs  proxy.rs  shadowsocks.rs  shadowtls.rs  sysdns.rs  sysproxy.rs  tray.rs  wd_engine.rs
src-tauri/src/wd/: mod.rs
