[package]
name = "stls"
version = "0.1.0"
edition = "2021"
description = "User-friendly ShadowTLS client for Windows"
authors = ["soheilroko-netizen"]
license = "MIT"
repository = "https://github.com/soheilroko-netizen/stls"

[workspace]

[workspace.members]
# Frontend handled by npm

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "dialog", "fs", "shell", "log", "notification", "os", "store", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full", "macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
bytes = "1.5"
base64 = "0.21"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
rand = "0.8"
zeroize = "1.6"
percent-encoding = "2.3"
md5 = "0.7"
aes-gcm = { version = "0.10", features = ["aes", "gcm"] }
chacha20poly1305 = "0.10"
blake3 = "1.5"
hkdf = "0.12"
tauri-plugin-store = "2.0"
tauri-plugin-log = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-notification = "2.0"
tauri-plugin-os = "2.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }