[package]
name = "stls"
version = "4.0.0"
edition = "2021"
description = "stls - minimal ShadowTLS + Shadowsocks chain proxy client (CLI)"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = "2"
directories = "5"
ctrlc = "3"

[[bin]]
name = "stls"
path = "src/main.rs"
