# stls - ShadowTLS + Shadowsocks CLI client
# Pure Rust implementation, binary distribution with embedded sing-box

[package]
name = "stls"
version = "5.0.0"
edition = "2021"

[[bin]]
name = "stls"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
zip = "2"
directories = "5"
anyhow = "1"

# Optional: embed sing-box binary for offline use
# Place sing-box binaries in ./bin/ directory during build